--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
         <h2 class="section-title text-center">My Recent Work</h2>
         <div class="portfolio-grid">
           <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-            <img src="portfolio.png" alt="Project 1" class="portfolio-img" />
+            <img src="portal.png" alt="Project 1" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3 class="portfolio-title">Student portal Platform</h3>
               <p class="portfolio-category">Web Development</p>
@@ -1664,9 +1664,9 @@
             </div>
           </div>
           <div class="portfolio-item" data-aos="fade-up" data-aos-delay="300">
-            <img src="portfolio.png" alt="Project 3" class="portfolio-img" />
+            <img src="brimieg.png" alt="Project 3" class="portfolio-img" />
             <div class="portfolio-overlay">
-              <h3 class="portfolio-title">Auth App</h3>
+              <h3 class="portfolio-title">Businnes website</h3>
               <p class="portfolio-category">Web application</p>
               <a href="#" class="portfolio-link">View Project</a>
             </div>
@@ -1861,20 +1861,20 @@
         {
           title: "Student portal platform",
           category: "Web Development",
-          img: "portfolio.png",
+          img: "portal.png",
           description:
-            "A full-stack e-commerce platform built with React, Node.js, and MongoDB. Features include user authentication, product management, shopping cart, and payment processing.",
+            "A full-stack student portal platform built with React, Node.js, and MongoDB. Features include user authentication, student management",
           features: [
             { icon: "fa-react", text: "React Frontend" },
             { icon: "fa-node-js", text: "Node.js Backend" },
             { icon: "fa-database", text: "MongoDB Database" },
-            { icon: "fa-credit-card", text: "Stripe Integration" },
+            { icon: "fa-credit-card", text: "Express" },
           ],
           liveLink: "#",
           codeLink: "#",
         },
         {
-          title: "Portfolio Website",
+          title: "personal portfolio",
           category: "UI/UX Design",
           img: "portfolio.png",
           description:
@@ -1889,15 +1889,15 @@
           codeLink: "#",
         },
         {
-          title: "Auth App",
-          category: "Mobile App",
-          img: "portfolio.png",
+          title: "company website",
+          category: "business website ",
+          img: "brimieg.png",
           description:
-            "A social media application built with React,Express.js with Firebase, that allows users to register and login.",
+            "A business website for an engineering company.",
           features: [
-            { icon: "fa-mobile", text: "React Native" },
+            { icon: "fa-mobile", text: "React vite" },
             { icon: "fa-fire", text: "Firebase" },
-            { icon: "fa-bell", text: "Real-time Notifications" },
+            { icon: "fa-bell", text: "business info" },
           ],
           liveLink: "#",
           codeLink: "#",
